@@ -4,6 +4,7 @@ Version Next
     - Vaadin7: Call Application.setCurrent() in ContextApplication.invoke()
     - Added PersistentObject.getRootSnapshot(); return new version from setRoot()
     - Fixed filtering bug in AbstractSimpleContainer and flaw in SimpleContainer
+    - Added IdGenerator.checkId()
 
 Version 1.0.432 Released June 29, 2012
 
